project-10-kubernetes-deployment-lab/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: support-api-service
  namespace: support
spec:
  selector:
    app: support-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
