project-10-kubernetes-deployment-lab/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-traffic
  namespace: support
spec:
  podSelector:
    matchLabels:
      app: support-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
